--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -7,112 +7,152 @@
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/coordinator"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+            android:fitsSystemWindows="false">
 
         <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
+                android:layout_height="wrap_content"
+                android:background="?attr/colorPrimary"
+                android:fitsSystemWindows="false"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                    android:id="@+id/collapse_toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                    app:layout_scrollFlags="scroll|enterAlways"/>
+                    android:layout_height="386dp"
+                    android:fitsSystemWindows="false"
+                    app:contentScrim="?attr/colorPrimary"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+                    app:titleEnabled="false">
 
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_collapseMode="parallax">
-
-                <ImageView
-                        android:id="@+id/backdrop"
+                <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/movide_placeholder"
-                        android:scaleType="centerCrop"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:backdropPath="@{movie.backdrop_path}"/>
+                        app:layout_collapseMode="parallax">
 
-                <View
+                    <ImageView
+                            android:id="@+id/backdrop"
+                            android:layout_width="match_parent"
+                            android:layout_height="220dp"
+                            android:src="@drawable/movie_placeholder"
+                            android:scaleType="centerCrop"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:backdropPath="@{movie.backdrop_path}"/>
+
+                    <View
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="#000000"
+                            android:alpha="0.6"
+                            app:layout_constraintTop_toBottomOf="@+id/backdrop"
+                            android:id="@+id/view">
+
+                    </View>
+                    <Space
+                            android:id="@+id/margin_space"
+                            android:layout_width="0dp"
+                            android:layout_height="0dp"
+                            android:layout_marginBottom="24dp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintBottom_toBottomOf="@+id/backdrop"
+                    />
+                    <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/poster_placeholder"
+                            app:posterPath="@{movie.poster_path}"
+                            android:id="@+id/poster"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/margin_space"
+                            android:layout_marginStart="16dp"/>
+                    <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="@{movie.title}"
+                            android:id="@+id/title"
+                            android:textSize="20sp"
+                            android:textColor="@android:color/white"
+                            android:textStyle="bold"
+                            app:layout_constraintStart_toEndOf="@+id/poster"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginEnd="8dp"
+                            app:layout_constraintEnd_toEndOf="parent" android:fontFamily="sans-serif-condensed-light"
+                            android:typeface="monospace" app:layout_constraintHorizontal_bias="0.0"
+                            android:layout_marginTop="4dp" app:layout_constraintTop_toBottomOf="@+id/runtime"/>
+                    <TextView
+                            app:setGenreName2="@{movie.genres}"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/genres" app:layout_constraintStart_toStartOf="@+id/title"
+                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/title"
+                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                            android:textSize="12sp" android:fontFamily="sans-serif-condensed-light"/>
+                    <TextView
+                            app:runtime="@{movie}"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/runtime"
+                            app:layout_constraintStart_toEndOf="@+id/poster" android:layout_marginStart="16dp"
+                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                            android:fontFamily="sans-serif-condensed" android:textSize="12sp"
+                            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"
+                            app:layout_constraintTop_toBottomOf="@+id/certification"/>
+                    <TextView
+                            app:setCertification="@{movie}"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/certification"
+                            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/view"
+                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                            app:layout_constraintStart_toEndOf="@+id/poster" android:layout_marginStart="16dp"
+                            android:textSize="12sp" android:fontFamily="sans-serif-condensed"/>
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.appcompat.widget.Toolbar
+                        android:id="@+id/toolbar"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#000000"
-                        android:alpha="0.6"
-                        app:layout_constraintTop_toBottomOf="@+id/backdrop"
-                >
-
-                </View>
-                <Space
-                        android:id="@+id/margin_space"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_marginBottom="24dp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintBottom_toBottomOf="@+id/backdrop"
-                />
-                <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/poster_placeholder"
-                        app:posterPath="@{movie.poster_path}"
-                        android:id="@+id/poster"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/margin_space"
-                        android:layout_marginStart="16dp"/>
-                <TextView
-                        android:text="@{movie.title}"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/name"
-                        app:layout_constraintStart_toEndOf="@+id/poster"
-                        android:layout_marginStart="8dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        android:textSize="24sp"
-                        android:textColor="@android:color/white"
-                        android:textStyle="bold"
-                        android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
-                        app:layout_constraintTop_toBottomOf="@+id/backdrop" android:layout_marginBottom="8dp"
-                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.1"
-                        app:layout_constraintVertical_bias="0.114"
-                />
+                        android:layout_height="?attr/actionBarSize"
+                        android:layout_gravity="top"
+                        android:layout_marginTop="24dp"
+                        app:layout_collapseMode="pin"
+                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
 
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
             <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/tab_layout"
+                    android:id="@+id/tablayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:tabGravity="fill"
-                    app:tabMode="scrollable"/>
+                    android:layout_gravity="bottom"
+                    app:tabIndicatorColor="@android:color/white"
+                    app:tabSelectedTextColor="@android:color/white"
+                    app:tabTextColor="@android:color/white"/>
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
-                                               android:layout_height="match_parent"
-                                               android:fillViewport="true">
-            <androidx.viewpager.widget.ViewPager
-                    android:id="@+id/vp_movies"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
-        </androidx.core.widget.NestedScrollView>
+        <androidx.viewpager.widget.ViewPager
+                android:id="@+id/viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
         <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:id="@+id/progressbar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:visibility="gone"/>
-
+                android:visibility="gone"
+        />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
