--- a/app/src/main/res/layout/cast_item.xml
+++ b/app/src/main/res/layout/cast_item.xml
@@ -24,20 +24,21 @@
                 />
         <TextView
                 android:text="@{cast.name}"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/name" app:layout_constraintStart_toEndOf="@+id/profile"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/character"
+                android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.506"/>
+                app:layout_constraintHorizontal_bias="0.0" android:textSize="16sp"
+                android:fontFamily="sans-serif-condensed" android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
                 android:text="@{cast.character}"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/character" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintStart_toEndOf="@+id/profile"
+                android:layout_marginStart="8dp" android:fontFamily="sans-serif-condensed"
+                android:layout_marginTop="8dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
