--- a/app/src/main/res/layout/fragment_movie_info.xml
+++ b/app/src/main/res/layout/fragment_movie_info.xml
@@ -183,7 +183,42 @@
                     app:layout_constraintTop_toBottomOf="@+id/homepageTitle"
                     style="@style/facts_content"
             />
-
+            <TextView
+                    android:text="@string/production_companies"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/production_companies_title" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/homepage" app:layout_constraintEnd_toEndOf="parent"
+                    style="@style/facts_title"/>
+            <TextView
+                    app:setProductionCompanies="@{movie}"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/production_companies"
+                    app:layout_constraintTop_toBottomOf="@+id/production_companies_title"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    style="@style/facts_content"/>
+            <TextView
+                    android:text="@string/release_infomation"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/release_infomation_title"
+                    app:layout_constraintTop_toBottomOf="@+id/production_companies"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    style="@style/facts_title"/>
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_movie_trailers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toBottomOf="@+id/release_infomation_title"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
